# dbus_gatt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ToDo.txt
cmake/: FindDBus.cmake  FindGLIB.cmake
example/: CMakeLists.txt  dbus_gatt_example.conf  main.cpp
include/dbus_gatt/: dbus_gatt.h  dbus_gatt_characteristic.h  dbus_gatt_characteristic_read_only_value.h  dbus_gatt_characteristic_read_write_callback.h  dbus_gatt_constants.h  dbus_gatt_exceptions.h  dbus_gatt_service.h  dbus_gatt_types.h  gatt_uuid.h
src/: CMakeLists.txt  dbus_gatt.cpp  dbus_gatt_characteristic.cpp  dbus_gatt_characteristic_read_only_value.cpp  dbus_gatt_characteristic_read_write_callback.cpp  dbus_gatt_service.cpp  gatt_uuid.cpp
src/impl/: dbus_gatt_app_impl_constants.h  dbus_gatt_characteristic_impl.cpp  dbus_gatt_characteristic_impl.h  dbus_gatt_impl.cpp  dbus_gatt_impl.h  dbus_gatt_service_impl.h  dbus_interface.h  dbus_method.cpp  dbus_method.h  dbus_object.cpp  dbus_object.h  dbus_object_path.h  dbus_property.cpp  dbus_property.h  gvariant_converter.cpp  gvariant_converter.h
unit_tests/: CMakeLists.txt  test_characteristic_impl.cpp  unit_test_characteristic.cpp  unit_test_characteristic_impl.cpp  unit_test_gatt_uuid.cpp
